js262/test/language/module-code/parse-err-decl-pos-export-object-method.js


/*---
description: Expression cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

({ m() { export default null; } });
